- Fixed overflow of questions /resources in list view

--- a/app/styles/components/_gru-two-tier-header-table-1.scss
+++ b/app/styles/components/_gru-two-tier-header-table-1.scss
@@ -1,7 +1,7 @@
 $left-cell-margin: 20vw;
 .gru-two-tier-header-table-1 {
   $table-cell-width: auto;
-  // width: 100vw;
+  width: 77vw;
   overflow-x: auto;
   overflow-y: hidden;
   padding-bottom: 1px;
